Moved contents of README to the documentation.

--- a/README
+++ b/README
@@ -2,32 +2,6 @@
 Script Language run
 *******************
 
-Objective
-=========
-
-An objective of run is replacing schell scripts.
-
-Features
-========
-
-* External command executing with easy syntax
-* Powerfull redirecting
-* Basic Types
-  * Array
-  * Float
-  * Hash
-  * Int
-  * String
-* Structured programming with ``for``, ``while`` and ``if`` statements
-* Arithmetic operations
-  * Basic operations such as ``+``, ``-``, etc
-  * Function call
-* UTF-8 (only) acceptable
-* Written with Objective Caml
-
-Author
-======
-
-An author of run is Ranko Kadonote.
+The documentation of run is in ``doc`` directory. Please read it.
 
 .. vim: tabstop=2 shiftwidth=2 expandtab softtabstop=2 filetype=rst
